<resources>
    <string name="app_name">NeWork</string>
    <string name="descriptionPostAuthorAvatar">Post author avatar</string>
    <string name="menu_description">Post menu</string>
    <string name="remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="empty_content">Text is empty.</string>
    <string name="editInMenu">Edit</string>
    <string name="editBarTitle">Editing...</string>
    <string name="cancell_button_description">Cancell button</string>
    <string name="save_button_description">Save button</string>
    <string name="share_post">Share post</string>
    <string name="chooser_share_post">Where to share?</string>
    <string name="empty_text_error">Empty text</string>
    <string name="video_play_error">There is not youtube-app</string>
    <string name="cancel_post_text">Cancel post</string>
    <string name="retry">Retry</string>
    <string name="no_posts">No posts</string>
    <string name="new_post">New post</string>
    <string name="error_bar_start_text">"Action was NOT performed. Swipe from top to bottom to try to refresh the page. Error code - "</string>
    <string name="upload_failed">Post upload failed.</string>
    <string name="action_saved">Action result was saved.</string>
    <string name="fresh_posts">Fresh posts (%1$s)</string>
    <string name="loading">Loading...</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="password">password</string>
    <string name="login_toast_empty">Login must not be empty.</string>
    <string name="login_toast_request">Request for login...</string>
    <string name="login_toast_success">Login successes as user with id=%1$s.</string>
    <string name="login_toast_unsuccess">Login and password didn`t match. Error log - %1$s</string>
    <string name="regi_toast_empty">Login and name must not be empty.</string>
    <string name="regi_toast_request">Request for registration...</string>
    <string name="regi_toast_success">Registration successes (id=%1$s).</string>
    <string name="regi_toast_unsuccess">Registration unsuccessful. Error log - %1$s</string>
    <string name="regi_toast_unmatch">Password not match with Confirm password.</string>
    <string name="newAndEdit_toast_empty">Text must not be empty.</string>
    <string name="newAndEdit_toast_request">Request for add/edit post...</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="users">Users</string>
    <string name="my_profile">My profile</string>
    <string name="my_profile_access_error">My profile page available only with authentication.</string>
    <string name="like_post">Like post</string>
    <string name="map_point_pick">Map point pick</string>
    <string name="new_in_nework">New in NeWork?</string>
    <string name="register_here">Register here</string>
    <string name="take_date_for_event_time">Take date for event time.</string>
    <string name="take_time_in_day_for_event">Take time in day for event.</string>
    <string name="video_link_hint">Video link</string>
    <string name="content_text_hint">Content text</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="new_post_button">New post button</string>
    <string name="user_wall">User`s wall</string>
    <string name="wall">Wall</string>
    <string name="jobs">Jobs</string>
    <string name="link_in_work_card">Link in work card</string>
    <string name="company_name">Company name</string>
    <string name="company_position">Company position</string>
    <string name="company_link">Company link</string>
    <string name="error_with_creating_map">Error with creating map.</string>
    <string name="error_with_list_user_display">Error with list user display.</string>
    <string name="position">Map point to save: %1$s / %2$s</string>
    <string name="show_position">Map point: %1$s / %2$s</string>
    <string name="you_participants_in_this_event">You participants in this event.</string>
    <string name="job_menu">Job menu</string>
    <string name="sign_in_for_sending_post">Sign In for sending post.</string>
    <string name="action_not_yet_available">Action not yet available</string>
    <string name="do_you_want_to_sign_in_for_like_add_posts_etc">Do you want to sign in? ... for like/add posts etc.</string>
    <string name="cancel">Cancel</string>
    <string name="list_of_mentioned_users">List of mentioned users</string>
    <string name="today">TODAY</string>
    <string name="yesterday">YESTERDAY</string>
    <string name="last_week">LAST WEEK</string>
    <string name="no_map_point">No map point</string>
    <string name="erroneous_absence_of_map_display">Erroneous absence of map display.</string>
    <string name="button_for_map_opening_in_the_bottom">Button for map opening in the bottom.</string>
    <string name="clear_image">Clear image</string>
    <string name="select_mention_users">SELECT MENTION USERS</string>
    <string name="select_users">SELECT USERS</string>
    <string name="list_of_participant_users">List of participant users.</string>
    <string name="no_participant_users">No participant users.</string>
    <string name="select_speakers">SELECT SPEAKERS</string>
    <string name="select_event_day">SELECT EVENT DAY</string>
    <string name="select_event_in_day_time">SELECT EVENT IN DAY TIME</string>
    <string name="list_of_participants">LIST OF PARTICIPANTS</string>
    <string name="list_of_speakers">LIST OF SPEAKERS</string>
    <string name="retry_loading">Retry loading?</string>
    <string name="you_are_not_authenticated">You are NOT authenticated.</string>
    <string name="link_does_not_lead_to_the_site">Link does not lead to the site.</string>
    <string name="user_was_not_founded_request_id">User was NOT founded (request id=%1$s)</string>
    <string name="no_speakers_for_this_event">No speakers for this event.</string>
    <string name="no_participants_for_this_event">No participants for this event.</string>
    <string name="no_mentioned_users_for_this_post">No mentioned users for this post.</string>
    <string name="select_start_date">SELECT START DATE</string>
    <string name="select_finish_date">SELECT FINISH DATE</string>
    <string name="select_mentioned_users">SELECT MENTIONED USERS</string>
    <string name="job_changed_was_saved">Job changed was saved.</string>
    <string name="take_photo">Take photo</string>
    <string name="take_picture_from_gallery">Take picture from gallery</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="clear_avatar">Clear avatar</string>
    <string name="already_registered">Already Registered?</string>
    <string name="login_here">Login here</string>
    <string name="your_participation_not_been_noted">Your participation NOT been noted</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="failure_with_users_info_error_code">Failure with users info, error code: \"%1$s\"</string>
    <string name="add_post">add post</string>
    <string name="add_job">add job</string>
    <string name="lock_or_unlock_scrolling">lock or unlock scrolling</string>
    <string name="lock_or_unlock_map">lock or unlock map</string>
    <string name="there_was_not_previous_location">There was NOT previous location.</string>
    <string name="date_time">"Date time:"</string>
    <string name="event_time_must_be_defined_fully">Event time must be defined fully (day and time).</string>
    <string name="empty_message_or_event_time_is_not_defined">Empty message or event time is not defined.</string>
    <string name="fix_is_needs">Fix is needs</string>
    <string name="continue_to_fix">Continue to fix</string>
    <string name="exit_without_fix">Exit without fix</string>
    <string name="take_work_finish_date_to_present">Take work finish date to present.</string>
    <string name="set_day">Set day</string>
    <string name="set_day_to_present">Set day/to present</string>
    <string name="require_value_s_in_job_was_were_not_defined">Require value(s) in job was(were) NOT defined.</string>
    <string name="company_name_must_not_be_empty">Company name must NOT be empty.</string>
    <string name="position_name_must_not_be_empty">Position name must NOT be empty.</string>
    <string name="start_date_must_be_defined">Start date must be defined.</string>
    <string name="trying_to_out_participating">Trying to out from participating in event by %1$s...</string>
    <string name="trying_to_in_participating">Trying to participating in event by %1$s...</string>
    <string name="wait_change_status_or_error_message">...wait change status or error message...</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>