<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/hedderTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="?attr/actionBarSize"
                android:text="@string/registration"
                android:textSize="32sp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/newAttachmentMedia"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/defaultMargin"
                    android:importantForAccessibility="no"
                    android:visibility="visible"
                    tools:srcCompat="@tools:sample/avatars[8]" />
            </FrameLayout>

            <EditText
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/defaultMargin"
                android:ems="10"
                android:hint="@string/name"
                android:singleLine="true"
                android:importantForAutofill="no"
                android:inputType="none" />

            <EditText
                android:id="@+id/txtLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/login"
                android:singleLine="true"
                android:importantForAutofill="no"
                android:inputType="none" />


            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/txtCnfPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="true"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/defaultMargin"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/clearPhoto"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/defaultMargin"
                    android:lines="1"
                    android:maxWidth="200dp"
                    android:text="@string/clear_avatar"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    android:backgroundTint="@color/black"
                    app:layout_anchor="@id/newAttachmentMedia" />

                <Button
                    android:id="@+id/takePhoto"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/defaultMargin"
                    android:layout_marginEnd="@dimen/defaultMargin"
                    android:backgroundTint="?colorPrimary"
                    android:contentDescription="@string/take_photo"
                    app:icon="@drawable/baseline_photo_camera_48"
                    app:iconGravity="textStart"
                    app:iconTint="?colorOnPrimary" />

                <Button
                    android:id="@+id/gallery"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/defaultMargin"
                    android:backgroundTint="?colorPrimary"
                    android:contentDescription="@string/take_picture_from_gallery"
                    app:icon="@drawable/baseline_gallery_48"
                    app:iconGravity="textStart"
                    app:iconTint="?colorOnPrimary" />

                <Button
                    android:id="@+id/signUpButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/black"
                    android:textColor="@color/white"
                    android:layout_marginEnd="@dimen/defaultMargin"
                    android:lines="1"
                    android:text="@string/sign_up" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/signInHintButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/defaultMargin"
                android:layout_marginBottom="@dimen/defaultMargin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:maxLines="1"
                    android:text="@string/already_registered"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="@dimen/defaultTextSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:maxLines="1"
                    android:text="@string/login_here"
                    android:textColor="@color/design_default_color_primary"
                    android:textSize="@dimen/defaultTextSize"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>