<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/jobIv"
        android:layout_width="@dimen/avatarDimen"
        android:layout_height="@dimen/avatarDimen"
        android:layout_margin="@dimen/defaultMargin"
        android:contentDescription="@string/descriptionPostAuthorAvatar"
        android:src="@drawable/baseline_work_48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/companyName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultMargin"
        android:layout_marginEnd="@dimen/defaultMargin"
        android:ellipsize="end"
        android:hint="@string/company_name"
        android:importantForAutofill="no"
        android:inputType="none"
        android:singleLine="true"
        android:textSize="@dimen/defaultTextSize"
        app:layout_constraintBottom_toTopOf="@id/position"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/jobIv"
        app:layout_constraintTop_toTopOf="@id/jobIv"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@tools:sample/cities" />

    <EditText
        android:id="@+id/position"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultMargin"
        android:layout_marginEnd="@dimen/defaultMargin"
        android:ellipsize="end"
        android:hint="@string/company_position"
        android:importantForAutofill="no"
        android:inputType="none"
        android:singleLine="true"
        android:textSize="@dimen/defaultTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/jobIv"
        app:layout_constraintTop_toBottomOf="@id/companyName"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@tools:sample/full_names" />

    <EditText
        android:id="@+id/link"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/defaultMargin"
        android:layout_marginEnd="@dimen/defaultMargin"
        android:ellipsize="end"
        android:hint="@string/company_link"
        android:importantForAutofill="no"
        android:inputType="none"
        android:singleLine="true"
        android:textSize="@dimen/defaultTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/jobIv"
        app:layout_constraintTop_toBottomOf="@id/position"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="www.example.com" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startTime"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:clickable="false"
        android:focusable="false"
        android:singleLine="true"
        android:text="01.06.2024"
        android:textColor="@color/black"
        app:icon="@drawable/baseline_start_48"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="@id/link"
        app:layout_constraintTop_toBottomOf="@id/link" />

    <Button
        android:id="@+id/pickStartDate"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/defaultMargin"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/take_date_for_event_time"
        app:icon="@drawable/baseline_edit_calendar_48"
        app:iconGravity="textStart"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/startTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/startTime"
        app:layout_constraintTop_toTopOf="@id/startTime" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/finishTime"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin"
        android:clickable="false"
        android:focusable="false"
        android:singleLine="true"
        android:text="05.07.2029"
        android:textColor="@color/black"
        app:icon="@drawable/baseline_waving_hand_48"
        app:iconTint="@color/black"
        app:layout_constraintStart_toStartOf="@id/startTime"
        app:layout_constraintTop_toBottomOf="@id/startTime" />

    <Button
        android:id="@+id/pickFinishDate"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/defaultMargin"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/take_date_for_event_time"
        app:icon="@drawable/baseline_edit_calendar_48"
        app:iconGravity="textStart"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/finishTime"
        app:layout_constraintEnd_toStartOf="@+id/pickPresent"
        app:layout_constraintStart_toEndOf="@id/finishTime"
        app:layout_constraintTop_toTopOf="@id/finishTime" />

    <Button
        android:id="@+id/pickPresent"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/defaultMargin"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/take_work_finish_date_to_present"
        app:icon="@drawable/baseline_today_48"
        app:iconGravity="textStart"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/finishTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/pickFinishDate"
        app:layout_constraintTop_toTopOf="@id/finishTime" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/buttonDefaultMarginDim"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/finishTime" />

    <Button
        android:id="@+id/save"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="@dimen/defaultMargin"
        android:backgroundTint="?colorPrimary"
        android:contentDescription="@string/take_date_for_event_time"
        app:icon="@drawable/baseline_check_48"
        app:iconGravity="textStart"
        app:iconTint="?colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cancel"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="@dimen/defaultMargin"
        android:backgroundTint="#f77"
        android:contentDescription="@string/take_date_for_event_time"
        app:icon="@drawable/baseline_cross_48"
        app:iconGravity="textStart"
        app:iconTint="?colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>