<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/buttonDefaultMarginDim">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/descriptionPostAuthorAvatar"
            tools:src="@tools:sample/avatars"/>

        <TextView
            android:id="@+id/nameAndLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:textSize="24sp"
            android:ellipsize="end"
            android:singleLine="true"
            android:layout_gravity="bottom|center"
            tools:text="Name Surname / Nickname" />
        </FrameLayout>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/userGroupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleSelection="true"
            android:layout_gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/wall"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wall"
                app:icon="@drawable/baseline_edit_note_48" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/jobs"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jobs"
                app:icon="@drawable/baseline_work_48" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swiperefresh_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/swiperefresh_job"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userGroupButton"
            android:visibility="gone">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_post"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignParentTop="true"
                android:paddingTop="?attr/actionBarSize"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_in_feed_post_or_event" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swiperefresh_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/swiperefresh_post"
            android:visibility="visible">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_job"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_in_feed_job" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>


